--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "prisma generate && next build",
+  "buildCommand": "DATABASE_URL=file:./dev.db prisma generate && next build",
   "framework": "nextjs",
   "installCommand": "npm install"
 }
