--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "19.2.3",
     "react-icons": "^5.3.0",
     "react-quill-new": "^3.7.0",
+    "react-toastify": "^11.0.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
